# wte-digital-twin-6mw

./: .gitignore  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ai/predictive/: config.py  feature_eng.py  inference.py  model.py  train.py
backend/api/: main.py  requirements.txt
backend/supabase/: setup.sh
backend/supabase/migrations/: 001_plant_telemetry.sql
config/: .env.example
docs/architecture/: setup.md
frontend/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.tsx  index.css  supabaseClient.ts
matlab/core/: s00_run.m  s01_combustion.m  s02_grate_zones.m  s03_boiler.m  s04_rankine.m  s05_apc.m  s06_wastewater.m  s07_electrical.m  s08_opcua_bridge.m
opcua/bridge/: base_poller.py  mock_poller.py  opcua_poller.py  opcua_poller_v2.py  run_bridge.py  seed_lab.py
opcua/config/: tag_mapping.yaml
supabase/migrations/: 20260717000001_plant_telemetry.sql  20260717000002_plant_telemetry_full.sql  20260717000003_dt_computed_cols.sql  20260717000004_source_col.sql  20260717000005_water_treatment.sql  20260717000006_lab_samples.sql  20260717000007_electrical_protection.sql  20260717000008_rls_policies.sql  20260717000009_pm_alerts.sql
