[project]
name = "wte-digital-twin"
version = "0.1.0"
description = "Digital Twin for 6.6 MW Moving Grate WtE Plant (Ovation DCS)"
requires-python = ">=3.11"

dependencies = [
    "asyncua>=1.1.0",          # OPC-UA client (Ovation DCS bridge)
    "supabase>=2.0.0",         # Supabase Python client
    "fastapi>=0.111.0",        # REST API middleware
    "uvicorn[standard]>=0.30", # ASGI server
    "python-dotenv>=1.0.0",    # .env loader
    "pyyaml>=6.0",             # tag_mapping.yaml parser
    "numpy>=1.26",             # numerical computing
    "pandas>=2.0",             # data manipulation
    "scipy>=1.12",             # scientific computing
    "matplotlib>=3.8",         # plotting (model validation)
    "httpx>=0.27",             # async HTTP client
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",       # ML utilities
    "torch>=2.3",              # LSTM predictive maintenance
    "statsmodels>=0.14",       # copula / statistical models
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",               # linter
    "mypy>=1.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "opcua"]

[tool.ruff]
line-length = 100
target-version = "py311"
